subprojects/rizin-shell-parser/corpus/escape_args.txt
============================
Escape special command chars
============================

pd 10\@test\>name

---

(statements
  (arged_stmt
    command: (cmd_identifier)
    args: (args (arg (arg_identifier)))))


====================
Use newlines in echo
====================

?e "Hello\nWorld"

---

(statements
  (arged_stmt
    command: (cmd_identifier)
    args: (args (arg (double_quoted_arg)))))


===========
Escape hash
===========

?e Hello\#World

---

(statements
  (arged_stmt
    command: (cmd_identifier)
    args: (args (arg (arg_identifier)))))
