subprojects/rizin-shell-parser/corpus/grep_commands.txt
================
Very simple grep
================

pd 10 ~ mov
pd 10~mov
afl~$

---

(statements
  (grep_stmt
    command: (arged_stmt
    	       command: (cmd_identifier)
	       args: (args (arg (arg_identifier))))
    specifier: (grep_specifier (grep_specifier_identifier)))
  (grep_stmt
    command: (arged_stmt
    	       command: (cmd_identifier)
	       args: (args (arg (arg_identifier))))
    specifier: (grep_specifier (grep_specifier_identifier)))
  (grep_stmt
    command: (arged_stmt command: (cmd_identifier))
    specifier: (grep_specifier (grep_specifier_identifier))))


=======================================
Grep with cmd substitution as specifier
=======================================

pd 10~`?e mov`
pd 10~mo`?e v`
pd 10~mo$(?e v)

---

(statements
  (grep_stmt
    (arged_stmt (cmd_identifier)
      (args (arg (arg_identifier))))
    (grep_specifier
      (cmd_substitution_arg
        (arged_stmt (cmd_identifier)
	  (args (arg (arg_identifier)))))))
  (grep_stmt
    (arged_stmt (cmd_identifier)
      (args (arg (arg_identifier))))
    (grep_specifier
      (grep_specifier_identifier)
      (cmd_substitution_arg
        (arged_stmt (cmd_identifier)
	  (args (arg (arg_identifier)))))))
  (grep_stmt
    (arged_stmt (cmd_identifier)
      (args (arg (arg_identifier))))
    (grep_specifier
      (grep_specifier_identifier)
      (cmd_substitution_arg
        (arged_stmt (cmd_identifier)
	  (args (arg (arg_identifier))))))))
